--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.anchor{
+/* .anchor{
     color: black;
     width: 100px;
     font-size: 50px;
@@ -24,22 +24,22 @@ ul.clist{
 }
 #customers{
 /* border-collapse: collapse; */
-width: 100%;
+/* width: 100%;
 text-align: center;
-vertical-align: top;
-}
+vertical-align: top; */
+/* } */
 /* tr,td,th{
     border: 2px solid black; */
-}
+/* }
 tr:hover{
     background-color: burlywood;
 }
 /* #customers tr:nth-child(even){background-color: #f2f2f2;} */
-#customers tr:nth-child(6){background-color: gray;}
+/* #customers tr:nth-child(6){background-color: gray;}
 tr{
     height: 50px;
     vertical-align: top;
 }
 .tab{
     overflow-x: auto;
-}
+} */ 
